# src/app.ts
@@ -19,6 +19,7 @@ import auditRoutes from './routes/auditRoutes';
 import employeeRoutes from './routes/employeeRoutes';
 import warrantyRoutes from './routes/warrantyRoutes';
 import supplierRoutes from './routes/supplierRoutes';
+import categoryRoutes from './routes/categoryRoutes';
 import allTransactionsRoutes from './routes/allTransactionsRoutes';
 
 const app = express();
@@ -77,6 +78,7 @@ app.use('/api/v1/audit/logs', auditRoutes);
 app.use('/api/v1/staff', employeeRoutes);
 app.use('/api/v1/warranty', warrantyRoutes);
 app.use('/api/suppliers', supplierRoutes);
+app.use('/api/v1/categories', categoryRoutes);
 app.use('/api/v1/transactions-all', allTransactionsRoutes);
 
 const PORT = process.env.PORT;
